fix leaderboard css on smaller screens

--- a/src/ui/apps/client/src/styles/components/leaderboards.css
+++ b/src/ui/apps/client/src/styles/components/leaderboards.css
@@ -1,7 +1,6 @@
 .leaderboards-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   max-height: 70vh;
   width: 70%;
   overflow: auto;
